# node-gyp-offline-install

./: LICENSE  README-EN.md  README.md
.github/workflows/: node.js.yml
Node.js/: .clang-format  7za  index.js  package.json
test/node-gyp-demo/: CMakeLists.txt  addon.cpp  binding.gyp  index.js
